bugfix overflow on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,15 @@
     box-sizing: border-box;
 }
 
+.html,
+.body {
+    overflow-x: hidden;
+}
+
+.body {
+    position: relative
+}
+
 .body {
     font-family: 'Inter';
 }
@@ -55,7 +64,10 @@ h2 {
 
 indexWrapper {
     display: flex;
+    position: absolute;
     height: 100vh;
+    width: 100vw;
+    overflow: hidden;
 }
 
 .indexContainer {
@@ -633,7 +645,7 @@ indexWrapper {
 
 .overlay {
     position: absolute;
-    transition: left 0.5s ease-in-out;
+    transition: left 5s ease-in-out;
     left: 500%;
     transform: translate(-50%, -50%);
     overflow-y: auto;
